PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_Terms_Matrix_History__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Current_Value__c</fullName>
        <label>New Value</label>
        <length>13170</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Original_Value__c</fullName>
        <label>Previous Value</label>
        <length>13170</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Terms_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terms Matrix</label>
        <referenceTo>Phoenix_Terms_Matrix__c</referenceTo>
        <relationshipLabel>Terms Matrix History</relationshipLabel>
        <relationshipName>Terms_Matrixes_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modified by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Phoenix_Terms_Matrixes_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Terms Matrix History</label>
    <nameField>
        <label>Terms Matrix History Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms Matrix History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>